--- a/PatientsService/src/main/resources/application.properties
+++ b/PatientsService/src/main/resources/application.properties
@@ -2,5 +2,4 @@ spring.application.name=PatientsService
 
 spring.profiles.active=dev
 
-#spring.config.import=optional:configserver:http://localhost:8888
-
+spring.config.import=configserver:http://localhost:8888
