Adding resilience4j configs for few APIs

--- a/PatientsService/src/main/resources/application.properties
+++ b/PatientsService/src/main/resources/application.properties
@@ -1,5 +1,36 @@
 spring.application.name=PatientsService
 
-spring.profiles.active=dev
+spring.profiles.active=test
 
 spring.config.import=configserver:http://localhost:8888
+
+
+resilience4j.retry.instances.deletePatientdb.max-attempts=3
+resilience4j.retry.instances.deletePatientdb.wait-duration=1000
+
+resilience4j.circuitbreaker.instances.deletePatientdb.failure-rate-threshold=3
+
+resilience4j.circuitbreaker.instances.deletePatientdb.sliding-window-size=10
+resilience4j.circuitbreaker.instances.deletePatientdb.minimum-number-of-calls=5
+resilience4j.circuitbreaker.instances.deletePatientdb.wait-duration-in-open-state=10000
+resilience4j.circuitbreaker.instances.deletePatientdb.automatic-transition-from-open-to-half-open-enabled=true
+
+resilience4j.retry.instances.getAllPatientsdb.max-attempts=3
+resilience4j.retry.instances.getAllPatientsdb.wait-duration=1000
+
+resilience4j.circuitbreaker.instances.getAllPatientsdb.failure-rate-threshold=3
+
+resilience4j.circuitbreaker.instances.getAllPatientsdb.sliding-window-size=10
+resilience4j.circuitbreaker.instances.getAllPatientsdb.minimum-number-of-calls=5
+resilience4j.circuitbreaker.instances.getAllPatientsdb.wait-duration-in-open-state=10000
+resilience4j.circuitbreaker.instances.getAllPatientsdb.automatic-transition-from-open-to-half-open-enabled=true
+
+resilience4j.retry.instances.searchPatientsdb.max-attempts=3
+resilience4j.retry.instances.searchPatientsdb.wait-duration=1000
+
+resilience4j.circuitbreaker.instances.searchPatientsdb.failure-rate-threshold=3
+
+resilience4j.circuitbreaker.instances.searchPatientsdb.sliding-window-size=10
+resilience4j.circuitbreaker.instances.searchPatientsdb.minimum-number-of-calls=5
+resilience4j.circuitbreaker.instances.searchPatientsdb.wait-duration-in-open-state=10000
+resilience4j.circuitbreaker.instances.searchPatientsdb.automatic-transition-from-open-to-half-open-enabled=true
