Adding custom exceptions

--- a/PatientsService/src/main/resources/application.properties
+++ b/PatientsService/src/main/resources/application.properties
@@ -34,3 +34,43 @@ resilience4j.circuitbreaker.instances.searchPatientsdb.sliding-window-size=10
 resilience4j.circuitbreaker.instances.searchPatientsdb.minimum-number-of-calls=5
 resilience4j.circuitbreaker.instances.searchPatientsdb.wait-duration-in-open-state=10000
 resilience4j.circuitbreaker.instances.searchPatientsdb.automatic-transition-from-open-to-half-open-enabled=true
+
+resilience4j.retry.instances.addPersonalInfodb.max-attempts=3
+resilience4j.retry.instances.addPersonalInfodb.wait-duration=1000
+
+resilience4j.circuitbreaker.instances.addPersonalInfodb.failure-rate-threshold=3
+
+resilience4j.circuitbreaker.instances.addPersonalInfodb.sliding-window-size=10
+resilience4j.circuitbreaker.instances.addPersonalInfodb.minimum-number-of-calls=5
+resilience4j.circuitbreaker.instances.addPersonalInfodb.wait-duration-in-open-state=10000
+resilience4j.circuitbreaker.instances.addPersonalInfodb.automatic-transition-from-open-to-half-open-enabled=true
+
+resilience4j.retry.instances.updatePersonalInfodb.max-attempts=3
+resilience4j.retry.instances.updatePersonalInfodb.wait-duration=1000
+
+resilience4j.circuitbreaker.instances.updatePersonalInfodb.failure-rate-threshold=3
+
+resilience4j.circuitbreaker.instances.updatePersonalInfodb.sliding-window-size=10
+resilience4j.circuitbreaker.instances.updatePersonalInfodb.minimum-number-of-calls=5
+resilience4j.circuitbreaker.instances.updatePersonalInfodb.wait-duration-in-open-state=10000
+resilience4j.circuitbreaker.instances.updatePersonalInfodb.automatic-transition-from-open-to-half-open-enabled=true
+
+resilience4j.retry.instances.addMedicalHistorydb.max-attempts=3
+resilience4j.retry.instances.addMedicalHistorydb.wait-duration=1000
+
+resilience4j.circuitbreaker.instances.addMedicalHistorydb.failure-rate-threshold=3
+
+resilience4j.circuitbreaker.instances.addMedicalHistorydb.sliding-window-size=10
+resilience4j.circuitbreaker.instances.addMedicalHistorydb.minimum-number-of-calls=5
+resilience4j.circuitbreaker.instances.addMedicalHistorydb.wait-duration-in-open-state=10000
+resilience4j.circuitbreaker.instances.addMedicalHistorydb.automatic-transition-from-open-to-half-open-enabled=true
+
+resilience4j.retry.instances.updateHealthMetricdb.max-attempts=3
+resilience4j.retry.instances.updateHealthMetricdb.wait-duration=1000
+
+resilience4j.circuitbreaker.instances.updateHealthMetricdb.failure-rate-threshold=3
+
+resilience4j.circuitbreaker.instances.updateHealthMetricdb.sliding-window-size=10
+resilience4j.circuitbreaker.instances.updateHealthMetricdb.minimum-number-of-calls=5
+resilience4j.circuitbreaker.instances.updateHealthMetricdb.wait-duration-in-open-state=10000
+resilience4j.circuitbreaker.instances.updateHealthMetricdb.automatic-transition-from-open-to-half-open-enabled=true
